# spatter_monitoring

./: .gitignore  CLAUDE.md  MIGRATION_STATUS.md  QUICKSTART.md  README.md  main.py  pyproject.toml
config/: config.yaml
config/data/: dataset.yaml
config/experiment/: baseline.yaml
config/model/: lenet5.yaml
config/training/: default.yaml
docs/: AGENT_CONTEXT.json  ANALYSIS.md  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  analysis_report.json
legacy/: README.md
legacy/1 spatter extraction/: spatter_fvideo_hdf5_bytes_v3.py  start frame for all videos.txt
legacy/2 cnn/: get_data_from_hdf5.py  lenet5.py  lenet5_withactivation.py  read_hdf5.ipynb  spatter_dataset.py  train_lenet5-Copy1.ipynb  train_lenet5_ModelTraining.ipynb
scripts/: train.py
src/spatter/data/: __init__.py  dataset.py  transforms.py
src/spatter/models/: __init__.py  lenet5.py
